syntax = "proto3";

package accesspdp;
option go_package = "github.com/virtru/access-pdp/v1/proto/accesspdp";

import "attributes/attributes.proto";

service AccessPDPEndpoint {
  rpc DetermineAccess(DetermineAccessRequest) returns (stream DetermineAccessResponse);
}

message DetermineAccessRequest {
  repeated attributes.AttributeInstance data_attributes = 1;
  map<string, ListOfAttributeInstances> entity_attribute_sets = 2;
  repeated attributes.AttributeDefinition attribute_definitions = 3;
}

message ListOfAttributeInstances {
  repeated attributes.AttributeInstance attribute_instances = 1;
}

message DetermineAccessResponse {
  string entity = 1;
  bool access = 2;
  repeated DataRuleResult results = 3;
}

message DataRuleResult {
  bool passed = 1;
  attributes.AttributeDefinition rule_definition = 2;
  repeated ValueFailure value_failures = 3;
}

message ValueFailure {
  attributes.AttributeInstance data_attribute = 1;
  string message = 2;
}
