syntax = "proto3";

package opentdf.accesspdp.v1;

import "opentdf.attributes.v1";

service AccessPDP {
    rpc DetermineAccess(AccessRequest) returns (stream Decision);
}

message AccessRequest {
    repeated opentdf.attributes.AttributeInstance data_attributes = 1;
    map<string, ListOfAttributeInstances> entity_attribute_sets = 2;
}

message ListOfAttributeInstances {
    repeated opentdf.attributes.AttributeInstance attribute_instances = 1;
}

message Decision {
  optional bool access = 1;
  repeated DataRuleResult entity_rule_result = 2;
}

message DataRuleResult {
  optional bool passed = 1;
  optional opentdf.attributes.AttributeDefinition rule_definition = 2;
  repeated ValueFailure rule_failures = 3;
}

message ValueFailure {
  optional opentdf.attributes.AttributeInstance data_attribute = 1;
  optional string message = 2;
}
