syntax = "proto3";

package opentdf.attributes.v1;

message AttributeInstance {
    string authority = 1;
    string name = 2;
    string value = 3;
}

message AttributeDefinition {
    string authority = 1;
    string name = 2;
    string rule = 3;
    optional string state = 4;
    optional AttributeInstance group_by = 5;
    repeated string order = 6;
}
